change title and notes

--- a/eBook/2.4.md
+++ b/eBook/2.4.md
@@ -1,4 +1,4 @@
-FSDataInputStream 写入数据
+FSDataOutputStream 写入数据
 ===================
 
 ## 源码
@@ -15,10 +15,10 @@ public class FSWriteSample {
         Path path = new Path("/tmp/writeSample.txt");  // 创建写路径
         Configuration conf = new Configuration();  //获取环境变量
         FileSystem fs = FileSystem.get(conf);  //获取文件系统
-        FSDataOutputStream fsout = fs.create(path); //创建输入流
+        FSDataOutputStream fsout = fs.create(path); //创建输出流
         byte[] buff = "hello word".getBytes(); //设置输出字符数组
         fsout.write(buff); //开始写出数组
-        IOUtils.closeStream(fsout); //关闭写入流
+        IOUtils.closeStream(fsout); //关闭写出流
     }
 }
 ```
