--- a/eBook/3.1.md
+++ b/eBook/3.1.md
@@ -30,3 +30,11 @@ public class SimpleCompression {
 ## 分析
 我们希望将内存中的数据写入到HDFS，并以gzip格式进行存储。程序的流程为： 首先获取HDFS的环境配置，然后确认使用gzip格式，确定输出路径及文件名后，通过命令 hadoop jar xxx.jar SimpleCompression 获取一个名为 
 helloword.gz 的文件。
+
+CompressionCodec 提供了对文件的压缩处理方式。如果要对某一个具体内容的数据进行压缩，首先应该采用的是 createOutputStream(OutputStream out)
+方法，其目的是创造一个 CompressionOutputStream， 即一个压缩问价输出流。然后根据形参的out设定，调用对应的write(byte[] buff)方法，将数据以二进制数组的形式写入HDFS中。
+
+同时，CompressionCodec 还提供了一个解压缩的方法，调用的方法如下
+```
+CompressionInputStream cis =  codec.createInputStream(in); 
+```
